basic reverse functionality added

--- a/yolo.common/yolo.common.csproj
+++ b/yolo.common/yolo.common.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="models\" />
+    <None Remove="extensions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="models\" />
+    <Folder Include="extensions\" />
+  </ItemGroup>
 </Project>
