--- a/yolo.core/yolo.core.csproj
+++ b/yolo.core/yolo.core.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="configurations\" />
+    <None Remove="Microsoft.Extensions.DependencyInjection" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="configurations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\yolo.service\yolo.service.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
 </Project>
