--- a/yolo.common/yolo.common.csproj
+++ b/yolo.common/yolo.common.csproj
@@ -16,6 +16,7 @@
     <Folder Include="extensions\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 </Project>
