--- a/yolo.service.commands/yolo.service.commands.csproj
+++ b/yolo.service.commands/yolo.service.commands.csproj
@@ -7,13 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="11.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\yolo.common\yolo.common.csproj" />
+    <ProjectReference Include="..\yolo.service\yolo.service.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Remove="implementations\" />
-    <None Remove="interfaces\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="interfaces\" />
-  </ItemGroup>
+
 </Project>
