--- a/yolo.core/yolo.core.csproj
+++ b/yolo.core/yolo.core.csproj
@@ -7,13 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="exceptions\**" />
+    <EmbeddedResource Remove="exceptions\**" />
+    <None Remove="exceptions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="configurations\" />
     <None Remove="Microsoft.Extensions.DependencyInjection" />
     <None Remove="exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="configurations\" />
-    <Folder Include="exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\yolo.service.commands\yolo.service.commands.csproj" />
