pageAssets worked with limit and offset

--- a/yolo.core/yolo.core.csproj
+++ b/yolo.core/yolo.core.csproj
@@ -25,8 +25,11 @@
     <ProjectReference Include="..\yolo.service\yolo.service.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="GraphQL.Client" Version="5.1.0" />
+    <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="5.1.0" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
 </Project>
