compose file updated

--- a/yolo.api/Dockerfile
+++ b/yolo.api/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
-EXPOSE 80
+EXPOSE 5000
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
@@ -22,4 +22,6 @@ RUN dotnet publish "yolo.api.csproj" -c Release -o /app/publish /p:UseAppHost=fa
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_URLS http://0.0.0.0:5000
+EXPOSE 5000
 ENTRYPOINT ["dotnet", "yolo.api.dll"]
