--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.4'
 
 services:
   yolo.api:
-    image: ${DOCKER_REGISTRY-}yolo
+    image: yoloapi
+    ports:
+        - "8091:5000"
     build:
       context: .
       dockerfile: yolo.api/Dockerfile
